# mnist

./: Dockerfile  MANIFEST.in  pyproject.toml  requirements.txt  run.sh  rundb.sh
note/: Untitled.ipynb  mnist.ipynb
src/mnist/: .main.py.swp  db.py  main.py  model.py  worker.py
src/mnist/model/: model.py
tests/: test_worker.py
